plugins {
    id 'java'
    id 'io.quarkus' version "${quarkusVersion}"
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform(
            "io.quarkus.platform:quarkus-bom:${quarkusVersion}"
    )
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest-jackson'
    //implementation 'io.quarkus:quarkus-rest-jaxb'
    implementation("io.quarkus:quarkus-cache")
    implementation 'io.quarkus:quarkus-hibernate-validator'
    implementation 'io.quarkus:quarkus-hibernate-reactive-panache'
    implementation 'io.quarkus:quarkus-reactive-pg-client'
    implementation 'io.smallrye.reactive:mutiny'

    testImplementation 'io.quarkus:quarkus-junit'
    testImplementation 'io.rest-assured:rest-assured'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    // --- Testcontainers ---
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.3'
    testImplementation 'org.testcontainers:testcontainers-postgresql:2.0.3'
    //testImplementation "org.testcontainers:kafka:1.21.4"
    // JDBC драйвер для Testcontainers
    testImplementation 'org.postgresql:postgresql:42.7.3'
}

group = project.group
version = project.version

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.test {
    // Показывать в консоли каждый тест при выполнении
    testLogging {
        events "passed", "skipped", "failed"  // какие события выводить
        showStandardStreams = true             // показывать System.out / System.err
        exceptionFormat = 'full'               // полный стектрейс при падении
    }
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"

    useJUnitPlatform()
    exclude '**/*IT*' // пропустить все интеграционные тесты
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
    //options.compilerArgs += "-Xlint:deprecation"
}

compileTestJava {
    options.encoding = 'UTF-8'
    //options.compilerArgs += "-Xlint:deprecation"
}
